--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-circular-progress": "^1.3.8",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-modal-datetime-picker": "^14.0.1",
