--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-paper": "^5.2.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
