--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.2.1",
     "react-native-svg": "^13.7.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
