--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/drawer": "^6.5.7",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.2.2",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.13.0",
@@ -29,7 +31,9 @@
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.2.1",
     "react-native-svg": "^13.7.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-vector-icons": "^9.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
