--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -250,6 +250,11 @@ android {
 }
 
 dependencies {
+      // For animated GIF support
+    implementation 'com.facebook.fresco:animated-gif:2.5.0'
+    // For WebP support, including animated WebP
+    implementation 'com.facebook.fresco:animated-webp:2.5.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
