--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-circular-progress": "^1.3.8",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^5.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-paper": "^5.2.0",
     "react-native-progress": "^5.0.0",
