--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-native-svg": "^13.7.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "rn-fetch-blob": "^0.12.0",
+    "react-native-webview": "^12.0.2",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
