--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.2.2",
+    "bson": "^5.3.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-circular-progress": "^1.3.8",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-gifted-chat": "^2.1.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
@@ -38,7 +40,8 @@
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
