--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-progress": "^5.0.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
