--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -24,6 +25,7 @@
     "react-native-image-picker": "^5.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-options-menu": "^2.0.2",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-progress": "^5.0.0",
@@ -37,8 +39,7 @@
     "react-native-webview": "^12.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "rn-fetch-blob": "^0.12.0"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
